# ML_for_scince

./: README.md  pyproject.toml
notebooks/: HW_1.ipynb  HW_2.ipynb  HW_2_update.ipynb  HW_3.ipynb  HW_3_update.ipynb
