[tool.poetry]
name = "ml-for-scince"
version = "0.1.0"
description = ""
authors = ["Anastasia <nkaliman00@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
